--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,3 +26,37 @@ jobs:
 
             - name: Check build
               run: npm run build
+
+    test:
+        timeout-minutes: 60
+        runs-on: ubuntu-20.04
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: lts/*
+            - name: Install dependencies
+              run: npm ci
+            - name: Install Playwright Browsers
+              run: npx playwright install --with-deps
+            - name: Run Playwright tests
+              run: npm run test:e2e
+            - uses: actions/upload-artifact@v4
+              if: ${{ !cancelled() }}
+              with:
+                  name: playwright-report
+                  path: playwright-report/
+                  retention-days: 30
+
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - name: Deploy to Render
+              uses: JorgeLNJunior/render-deploy@v1.4.4
+              with:
+                  service_id: ${{ secrets.RENDER_SERVICE_ID }}
+                  api_key: ${{ secrets.RENDER_API_KEY }}
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  github_deployment: true
+                  deployment_environment: 'production'
