--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,9 +8,12 @@ on:
 jobs:
     simple_deployment_pipeline:
         runs-on: ubuntu-20.04
+        timeout-minutes: 60
+        permissions:
+            deployments: write
+
         steps:
             - uses: actions/checkout@v4
-
             - uses: actions/setup-node@v4
               with:
                   node-version: '20'
@@ -27,16 +30,6 @@ jobs:
             - name: Check build
               run: npm run build
 
-    test:
-        timeout-minutes: 60
-        runs-on: ubuntu-20.04
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: lts/*
-            - name: Install dependencies
-              run: npm ci
             - name: Install Playwright Browsers
               run: npx playwright install --with-deps
             - name: Run Playwright tests
@@ -48,12 +41,11 @@ jobs:
                   path: playwright-report/
                   retention-days: 30
 
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
             - name: Deploy to Render
               uses: JorgeLNJunior/render-deploy@v1.4.4
               with:
                   service_id: ${{ secrets.RENDER_SERVICE_ID }}
                   api_key: ${{ secrets.RENDER_API_KEY }}
+                  github_deployment: true
+                  deployment_environment: 'production'
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
