--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,10 +42,7 @@ jobs:
                   retention-days: 30
 
             - name: Deploy to Render
-              uses: JorgeLNJunior/render-deploy@v1.4.4
+              uses: johnbeynon/render-deploy-action@v0.0.8
               with:
-                  service_id: ${{ secrets.RENDER_SERVICE_ID }}
-                  api_key: ${{ secrets.RENDER_API_KEY }}
-                  github_deployment: true
-                  deployment_environment: 'production'
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+                  api-key: ${{ secrets.MY_RENDER_API_KEY }}
