Deplyoment only happens in the main branch

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,6 +45,7 @@ jobs:
                   retention-days: 30
 
             - name: Deploy to Render
+              if: ${{ github.event_name == 'push' }}
               uses: johnbeynon/render-deploy-action@v0.0.8
               with:
                   service-id: ${{ secrets.RENDER_SERVICE_ID }}
