--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,3 +50,19 @@ jobs:
               with:
                   service-id: ${{ secrets.RENDER_SERVICE_ID }}
                   api-key: ${{ secrets.RENDER_API_KEY }}
+    tag_release:
+        if: ${{ github.event_name == 'push' }}
+        needs: [simple_deployment_pipeline]
+        runs-on: ubuntu-20.04
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: Github Tag Bump
+
+              uses: anothrNick/github-tag-action@1.71.0
+
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  DEFAULT_BUMP: patch
+                  WITH_V: true
+                  DRY_RUN: true
