--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,3 +66,4 @@ jobs:
                   DEFAULT_BUMP: patch
                   WITH_V: true
                   DRY_RUN: true
+                  INITIAL_VERSION: 0.0.1
