--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,6 +64,4 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   DEFAULT_BUMP: patch
-                  WITH_V: true
-                  DRY_RUN: true
-                  INITIAL_VERSION: v0.0.1
+                  INITIAL_VERSION: 0.0.1
