--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
                   service-id: ${{ secrets.RENDER_SERVICE_ID }}
                   api-key: ${{ secrets.RENDER_API_KEY }}
     tag_release:
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message),'#skip')}}
         needs: [simple_deployment_pipeline]
         runs-on: ubuntu-20.04
         steps:
@@ -65,20 +65,3 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   DEFAULT_BUMP: patch
                   INITIAL_VERSION: v0.0.1
-
-    a_test_job:
-        runs-on: ubuntu-20.04
-        steps:
-            - uses: actions/checkout@v4
-            - name: github context
-              env:
-                  GITHUB_CONTEXT: ${{ toJson(github) }}
-              run: echo "$GITHUB_CONTEXT"
-            - name: commits
-              env:
-                  COMMITS: ${{ toJson(github.event.commits) }}
-              run: echo "$COMMITS"
-            - name: commit messages
-              env:
-                  COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message ) }}
-              run: echo "$COMMIT_MESSAGES"
