--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,8 @@ on:
     pull_request:
         branches: [main]
         types: [opened, synchronize]
+    merge_group:
+        types: [checks_requested]
 
 jobs:
     simple_deployment_pipeline:
@@ -44,12 +46,12 @@ jobs:
                   path: playwright-report/
                   retention-days: 30
 
-            - name: Deploy to Render
-              if: ${{ github.event_name == 'push' }}
-              uses: johnbeynon/render-deploy-action@v0.0.8
-              with:
-                  service-id: ${{ secrets.RENDER_SERVICE_ID }}
-                  api-key: ${{ secrets.RENDER_API_KEY }}
+            # - name: Deploy to Render
+            #   if: ${{ github.event_name == 'push' }}
+            #   uses: johnbeynon/render-deploy-action@v0.0.8
+            #   with:
+            #       service-id: ${{ secrets.RENDER_SERVICE_ID }}
+            #       api-key: ${{ secrets.RENDER_API_KEY }}
     tag_release:
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message),'#skip')}}
         needs: [simple_deployment_pipeline]
